---------------------------------------------------------------------------------------------------
Version: 1.10.0
Game Versions: v1.1.0,v1.1.1,v1.1.2,v1.1.3,v1.1.4,v1.1.5,v1.1.6
* Feature: Enable module translation (support for English and Japanese language).
* Fix: The rewards have been fixed and now work as intended.
---------------------------------------------------------------------------------------------------
Version: 1.9.6
Game Versions: v1.1.0,v1.1.1,v1.1.2,v1.1.3,v1.1.4,v1.1.5,v1.1.6
* Bump Bannerlord target version to v1.1.6.
---------------------------------------------------------------------------------------------------
Version: 1.9.5
Game Versions: v1.1.0,v1.1.1,v1.1.2
* Support for PC Xbox Game Pass.
* Fixed a crash at campaign launch (Could not load type 'MonoMod.Utils.Extensions' from assembly 0Harmony) when the installed dotnet is not .NET Framework 4.7.2+.
* API: Fixed the usage of [spawnPlace] and [deathPlace] in the SpawnMessage displaying the wrong location after the first spawn.
* Fixed safe passage price for spawned parties starting differently than "cs_". (same price as lord safe passage price divided by 8)
* Fixed a crash at campaign launch "Access to the path '../../../../Modules/CustomSpawns/Logs' is denied."
---------------------------------------------------------------------------------------------------
Version: 1.9.4
Game Versions: v1.1.0,v1.1.1,v1.1.2
* Updated to support Bannerlord v1.1.0
---------------------------------------------------------------------------------------------------
Version: 1.9.3
Game Versions: v1.0.0,v1.0.1
* Fixed the wrong dialogue being displayed when the player is being thanked by a lord which has not been met after defeating a common enemy.
* Fixed a "NullPointerException" crash when Custom Spawns is paired with other mods adding new troops.
---------------------------------------------------------------------------------------------------
Version: 1.9.2
Game Versions: v1.0.0,v1.0.1